fix: minor layout issues in card and profile photo

--- a/src/blocks/card/__image/card__image.css
+++ b/src/blocks/card/__image/card__image.css
@@ -1,7 +1,8 @@
 .card__image {
-  height: 282px;
+  display: block;
   object-fit: cover;
   width: 100%;
+  height: 282px;
 }
 
 .card__image:hover {
