--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -1,12 +1,12 @@
 .profile__image {
-  width: 120px;
+  min-width: 120px;
   height: 120px;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  border-radius: 50%;
-  background-size: cover;
-  background-position: center;
   margin: 0 29px 0 0;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  background-position: center;
+  background-size: cover;
 }
 
 @media screen and (max-width: 740px) {
